# pytensor-workshop

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: docs_cross_reference_matrix.txt
notebooks/exercises/: flop_analysis.ipynb  implementing_a_type.ipynb  implementing_an_op.ipynb  optimization_with_scipy.ipynb  pagerank.ipynb  particle_filter.ipynb  writing_new_ops.ipynb
notebooks/walkthrough/: graph_transformation.ipynb  linalg-rewrite-from-scratch.ipynb  normalizing_flows_in_pytensor.ipynb  partialling.ipynb  pytensor_from_scratch.ipynb  pytensor_intro.ipynb
pytensor_workshop/: __init__.py  history_feature.py  src.py  testing.py
scripts/: docs_cross_reference_matrix.py  pytensor_from_scratch.py  pytensor_from_scratch.py.md
