[project]
name = "pytensor-workshop"
version = "0.0.1"
authors = [
  { name="PyMC developers" },
]
description = "Source code for pytensor workshop utilities"

dependencies = [
    "pytensor >=2.26.4,<3",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pymc-devs/pytensor-workshop"

[tool.setuptools]
packages = ["pytensor_workshop"]